--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <a href="https://www.linkedin.com/in/suriya-prakash-v-830212281" class="text-decoration-none me-3"
                 target="_blank" style="margin: 0 20px;">
                 <i class="bi bi-linkedin text-primary fs-4" style="margin: 0 10px;"></i>Linked in</a>
-            <a href="https://github.com/yourgithub" class="text-decoration-none me-3" target="_blank" style="margin: 0 20px;">
+            <a href="https://github.com/SuriyaPrakash1928" class="text-decoration-none me-3" target="_blank" style="margin: 0 20px;">
                 <i class="bi bi-github text-dark fs-4" style="margin: 0 10px;"></i>Github</a>
         </div>
     </footer>
